src/objects/ContCountryAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Country_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract_Country External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>R00N40000001hQH2EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contract Countries</relationshipLabel>
        <relationshipName>R00N40000001hQH3EAM</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Country</label>
    <nameField>
        <displayFormat>ContCoun-{0000}</displayFormat>
        <label>Contract Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>